# ACIQ_claude

./: .gitignore  AGENT_ARCHITECTURE.md  DASHBOARD_GUIDE.md  FINAL_RESULTS.md  LLM_ENHANCEMENT_PROPOSAL.md  MCP_SETUP.md  QUICKSTART.md  SMART_MATCHING_RESULTS.md  TEST_RESULTS.md  WORKFLOW.md  chat.py  check_progress.py  claude_desktop_config.json  dashboard.py  mcp_server.py  process_new_statement.py  review_exceptions.py  test_chat_simple.py  update_codes.py
accountantiq/: .gitignore  README.md  cli.py  orchestrator.py  pyproject.toml
accountantiq/agents/classifier_agent/: agent_config.yaml  classifier_agent.py
accountantiq/agents/exporter_agent/: agent_config.yaml  exporter_agent.py
accountantiq/agents/learner_agent/: agent_config.yaml  learner_agent.py
accountantiq/agents/parser_agent/: agent_config.yaml  bank_parser.py  parser_agent.py  sage_parser.py
accountantiq/agents/reviewer_agent/: agent_config.yaml  ai_suggester.py  reviewer_agent.py
accountantiq/core/: database.py  models.py  workspace.py
