[project]
name = "accountantiq"
version = "0.1.0"
description = "Autonomous bookkeeping tool with multi-agent system for auto-coding bank transactions"
authors = [{name = "AccountantIQ Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "polars>=0.20.0",
    "rapidfuzz>=3.6.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
accountantiq = "accountantiq.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
